add note for default levels

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5520,6 +5520,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>Default duty cycle of PWM</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> If you enable dew heater thresholds, this should be set to 0</div>
         </div>
     </div>
 
@@ -5710,6 +5711,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>Default duty cycle of PWM</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> If you enable fan thresholds, this should be set to 0</div>
         </div>
     </div>
 
