--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5593,6 +5593,19 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.DEW_HEATER__DEWPOINT_USER_VAR_SLOT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.DEW_HEATER__DEWPOINT_USER_VAR_SLOT(class='form-select bg-secondary') }}
+            <div id="DEW_HEATER__DEWPOINT_USER_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.DEW_HEATER__MANUAL_TARGET.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -6510,6 +6523,7 @@ const field_names = [
     'DEW_HEATER__LEVEL_DEF',
     'DEW_HEATER__MANUAL_TARGET',
     'DEW_HEATER__TEMP_USER_VAR_SLOT',
+    'DEW_HEATER__DEWPOINT_USER_VAR_SLOT',
     'DEW_HEATER__LEVEL_LOW',
     'DEW_HEATER__LEVEL_MED',
     'DEW_HEATER__LEVEL_HIGH',
