--- a/indi_allsky/flask/templates/loop_img.html
+++ b/indi_allsky/flask/templates/loop_img.html
@@ -22,7 +22,7 @@
 
 .fit {
     max-width:100%;
-    max-height:auto;   
+    height:auto;
 }
 </style>
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/settings_loop.js') }}"></script>
@@ -81,8 +81,8 @@ function showImage(entry, idx) {
 
     $('#loop-image').attr({
         'src': entry["url"],
-        'width': entry["width"] * ratio,
-        'height': entry["height"] * ratio - 120
+        'width': (entry["width"] * ratio) * 0.85,
+        'height': (entry["height"] * ratio) * 0.85
     });
 }
 
