--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -25,6 +25,10 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.strikethrough{
+  text-decoration: line-through;
+}
 </style>
 <script type="text/javascript">
 var camera_id = {{ camera_id }};
@@ -6942,6 +6946,95 @@ $('#USE_NIGHT_COLOR').on('change', function() {
 });
 
 
+// Dew Heater thresholds
+$('#DEW_HEATER__THOLD_ENABLE').on('change', function() {
+    if ($('#DEW_HEATER__THOLD_ENABLE').prop('checked')) {
+        $('#DEW_HEATER__LEVEL_DEF').val(0);
+        $('#DEW_HEATER__TEMP_USER_VAR_SLOT').removeAttr('readonly');
+        $('#DEW_HEATER__TEMP_USER_VAR_SLOT').removeAttr('disabled');
+        $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').removeAttr('readonly');
+        $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').removeAttr('disabled');
+        $('#DEW_HEATER__MANUAL_TARGET').removeAttr('readonly');
+        $('#DEW_HEATER__MANUAL_TARGET').removeAttr('disabled');
+        $('#DEW_HEATER__LEVEL_LOW').removeAttr('readonly');
+        $('#DEW_HEATER__LEVEL_LOW').removeAttr('disabled');
+        $('#DEW_HEATER__LEVEL_MED').removeAttr('readonly');
+        $('#DEW_HEATER__LEVEL_MED').removeAttr('disabled');
+        $('#DEW_HEATER__LEVEL_HIGH').removeAttr('readonly');
+        $('#DEW_HEATER__LEVEL_HIGH').removeAttr('disabled');
+        $('#DEW_HEATER__THOLD_DIFF_LOW').removeAttr('readonly');
+        $('#DEW_HEATER__THOLD_DIFF_LOW').removeAttr('disabled');
+        $('#DEW_HEATER__THOLD_DIFF_MED').removeAttr('readonly');
+        $('#DEW_HEATER__THOLD_DIFF_MED').removeAttr('disabled');
+        $('#DEW_HEATER__THOLD_DIFF_HIGH').removeAttr('readonly');
+        $('#DEW_HEATER__THOLD_DIFF_HIGH').removeAttr('disabled');
+    } else {
+        $('#DEW_HEATER__LEVEL_DEF').val(100);
+        $('#DEW_HEATER__TEMP_USER_VAR_SLOT').attr('readonly', true);
+        $('#DEW_HEATER__TEMP_USER_VAR_SLOT').attr('disabled', true);
+        $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').attr('readonly', true);
+        $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').attr('disabled', true);
+        $('#DEW_HEATER__MANUAL_TARGET').attr('readonly', true);
+        $('#DEW_HEATER__MANUAL_TARGET').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_LOW').attr('readonly', true);
+        $('#DEW_HEATER__LEVEL_LOW').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_MED').attr('readonly', true);
+        $('#DEW_HEATER__LEVEL_MED').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_HIGH').attr('readonly', true);
+        $('#DEW_HEATER__LEVEL_HIGH').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_LOW').attr('readonly', true);
+        $('#DEW_HEATER__THOLD_DIFF_LOW').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_MED').attr('readonly', true);
+        $('#DEW_HEATER__THOLD_DIFF_MED').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_HIGH').attr('readonly', true);
+        $('#DEW_HEATER__THOLD_DIFF_HIGH').attr('disabled', true);
+    }
+});
+
+
+// Fan thresholds
+$('#FAN__THOLD_ENABLE').on('change', function() {
+    if ($('#FAN__THOLD_ENABLE').prop('checked')) {
+        $('#FAN__LEVEL_DEF').val(0);
+        $('#FAN__TEMP_USER_VAR_SLOT').removeAttr('readonly');
+        $('#FAN__TEMP_USER_VAR_SLOT').removeAttr('disabled');
+        $('#FAN__TARGET').removeAttr('readonly');
+        $('#FAN__TARGET').removeAttr('disabled');
+        $('#FAN__LEVEL_LOW').removeAttr('readonly');
+        $('#FAN__LEVEL_LOW').removeAttr('disabled');
+        $('#FAN__LEVEL_MED').removeAttr('readonly');
+        $('#FAN__LEVEL_MED').removeAttr('disabled');
+        $('#FAN__LEVEL_HIGH').removeAttr('readonly');
+        $('#FAN__LEVEL_HIGH').removeAttr('disabled');
+        $('#FAN__THOLD_DIFF_LOW').removeAttr('readonly');
+        $('#FAN__THOLD_DIFF_LOW').removeAttr('disabled');
+        $('#FAN__THOLD_DIFF_MED').removeAttr('readonly');
+        $('#FAN__THOLD_DIFF_MED').removeAttr('disabled');
+        $('#FAN__THOLD_DIFF_HIGH').removeAttr('readonly');
+        $('#FAN__THOLD_DIFF_HIGH').removeAttr('disabled');
+    } else {
+        $('#FAN__LEVEL_DEF').val(100);
+        $('#FAN__TEMP_USER_VAR_SLOT').attr('readonly', true);
+        $('#FAN__TEMP_USER_VAR_SLOT').attr('disabled', true);
+        $('#FAN__TARGET').attr('readonly', true);
+        $('#FAN__TARGET').attr('disabled', true);
+        $('#FAN__LEVEL_LOW').attr('readonly', true);
+        $('#FAN__LEVEL_LOW').attr('disabled', true);
+        $('#FAN__LEVEL_MED').attr('readonly', true);
+        $('#FAN__LEVEL_MED').attr('disabled', true);
+        $('#FAN__LEVEL_HIGH').attr('readonly', true);
+        $('#FAN__LEVEL_HIGH').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_LOW').attr('readonly', true);
+        $('#FAN__THOLD_DIFF_LOW').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_MED').attr('readonly', true);
+        $('#FAN__THOLD_DIFF_MED').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_HIGH').attr('readonly', true);
+        $('#FAN__THOLD_DIFF_HIGH').attr('disabled', true);
+    }
+});
+
+
+
 $( document ).ready(function() {
     // Global timelapse
     if (!$('#TIMELAPSE_ENABLE').prop('checked')) {
@@ -7016,6 +7109,48 @@ $( document ).ready(function() {
         $('#AUTO_WB_DAY').attr('disabled', true);
         $('#SATURATION_FACTOR_DAY').attr('readonly', true);
         $('#SATURATION_FACTOR_DAY').attr('disabled', true);
+    }
+
+    // Dew Heater thresholds
+    if (!$('#DEW_HEATER__THOLD_ENABLE').prop('checked')) {
+        $('#DEW_HEATER__TEMP_USER_VAR_SLOT').attr('readonly', true);
+        $('#DEW_HEATER__TEMP_USER_VAR_SLOT').attr('disabled', true);
+        $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').attr('readonly', true);
+        $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').attr('disabled', true);
+        $('#DEW_HEATER__MANUAL_TARGET').attr('readonly', true);
+        $('#DEW_HEATER__MANUAL_TARGET').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_LOW').attr('readonly', true);
+        $('#DEW_HEATER__LEVEL_LOW').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_MED').attr('readonly', true);
+        $('#DEW_HEATER__LEVEL_MED').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_HIGH').attr('readonly', true);
+        $('#DEW_HEATER__LEVEL_HIGH').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_LOW').attr('readonly', true);
+        $('#DEW_HEATER__THOLD_DIFF_LOW').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_MED').attr('readonly', true);
+        $('#DEW_HEATER__THOLD_DIFF_MED').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_HIGH').attr('readonly', true);
+        $('#DEW_HEATER__THOLD_DIFF_HIGH').attr('disabled', true);
+    }
+
+    // Fan thresholds
+    if (!$('#FAN__THOLD_ENABLE').prop('checked')) {
+        $('#FAN__TEMP_USER_VAR_SLOT').attr('readonly', true);
+        $('#FAN__TEMP_USER_VAR_SLOT').attr('disabled', true);
+        $('#FAN__TARGET').attr('readonly', true);
+        $('#FAN__TARGET').attr('disabled', true);
+        $('#FAN__LEVEL_LOW').attr('readonly', true);
+        $('#FAN__LEVEL_LOW').attr('disabled', true);
+        $('#FAN__LEVEL_MED').attr('readonly', true);
+        $('#FAN__LEVEL_MED').attr('disabled', true);
+        $('#FAN__LEVEL_HIGH').attr('readonly', true);
+        $('#FAN__LEVEL_HIGH').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_LOW').attr('readonly', true);
+        $('#FAN__THOLD_DIFF_LOW').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_MED').attr('readonly', true);
+        $('#FAN__THOLD_DIFF_MED').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_HIGH').attr('readonly', true);
+        $('#FAN__THOLD_DIFF_HIGH').attr('disabled', true);
     }
 
 });
