set background dark on disabled items

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6952,42 +6952,60 @@ $('#DEW_HEATER__THOLD_ENABLE').on('change', function() {
         $('#DEW_HEATER__LEVEL_DEF').val(0);
         $('#DEW_HEATER__TEMP_USER_VAR_SLOT').removeAttr('readonly');
         $('#DEW_HEATER__TEMP_USER_VAR_SLOT').removeAttr('disabled');
+        $('#DEW_HEATER__TEMP_USER_VAR_SLOT').removeClass('bg-dark');
         $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').removeAttr('readonly');
         $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').removeAttr('disabled');
+        $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').removeClass('bg-dark');
         $('#DEW_HEATER__MANUAL_TARGET').removeAttr('readonly');
         $('#DEW_HEATER__MANUAL_TARGET').removeAttr('disabled');
+        $('#DEW_HEATER__MANUAL_TARGET').removeClass('bg-dark');
         $('#DEW_HEATER__LEVEL_LOW').removeAttr('readonly');
         $('#DEW_HEATER__LEVEL_LOW').removeAttr('disabled');
+        $('#DEW_HEATER__LEVEL_LOW').removeClass('bg-dark');
         $('#DEW_HEATER__LEVEL_MED').removeAttr('readonly');
         $('#DEW_HEATER__LEVEL_MED').removeAttr('disabled');
+        $('#DEW_HEATER__LEVEL_MED').removeClass('bg-dark');
         $('#DEW_HEATER__LEVEL_HIGH').removeAttr('readonly');
         $('#DEW_HEATER__LEVEL_HIGH').removeAttr('disabled');
+        $('#DEW_HEATER__LEVEL_HIGH').removeClass('bg-dark');
         $('#DEW_HEATER__THOLD_DIFF_LOW').removeAttr('readonly');
         $('#DEW_HEATER__THOLD_DIFF_LOW').removeAttr('disabled');
+        $('#DEW_HEATER__THOLD_DIFF_LOW').removeClass('bg-dark');
         $('#DEW_HEATER__THOLD_DIFF_MED').removeAttr('readonly');
         $('#DEW_HEATER__THOLD_DIFF_MED').removeAttr('disabled');
+        $('#DEW_HEATER__THOLD_DIFF_MED').removeClass('bg-dark');
         $('#DEW_HEATER__THOLD_DIFF_HIGH').removeAttr('readonly');
         $('#DEW_HEATER__THOLD_DIFF_HIGH').removeAttr('disabled');
+        $('#DEW_HEATER__THOLD_DIFF_HIGH').removeClass('bg-dark');
     } else {
         $('#DEW_HEATER__LEVEL_DEF').val(100);
         $('#DEW_HEATER__TEMP_USER_VAR_SLOT').attr('readonly', true);
         $('#DEW_HEATER__TEMP_USER_VAR_SLOT').attr('disabled', true);
+        $('#DEW_HEATER__TEMP_USER_VAR_SLOT').addClass('bg-dark');
         $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').attr('readonly', true);
         $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').attr('disabled', true);
+        $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').addClass('bg-dark');
         $('#DEW_HEATER__MANUAL_TARGET').attr('readonly', true);
         $('#DEW_HEATER__MANUAL_TARGET').attr('disabled', true);
+        $('#DEW_HEATER__MANUAL_TARGET').addClass('bg-dark');
         $('#DEW_HEATER__LEVEL_LOW').attr('readonly', true);
         $('#DEW_HEATER__LEVEL_LOW').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_LOW').addClass('bg-dark');
         $('#DEW_HEATER__LEVEL_MED').attr('readonly', true);
         $('#DEW_HEATER__LEVEL_MED').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_MED').addClass('bg-dark');
         $('#DEW_HEATER__LEVEL_HIGH').attr('readonly', true);
         $('#DEW_HEATER__LEVEL_HIGH').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_HIGH').addClass('bg-dark');
         $('#DEW_HEATER__THOLD_DIFF_LOW').attr('readonly', true);
         $('#DEW_HEATER__THOLD_DIFF_LOW').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_LOW').addClass('bg-dark');
         $('#DEW_HEATER__THOLD_DIFF_MED').attr('readonly', true);
         $('#DEW_HEATER__THOLD_DIFF_MED').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_MED').addClass('bg-dark');
         $('#DEW_HEATER__THOLD_DIFF_HIGH').attr('readonly', true);
         $('#DEW_HEATER__THOLD_DIFF_HIGH').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_HIGH').addClass('bg-dark');
     }
 });
 
@@ -6998,38 +7016,54 @@ $('#FAN__THOLD_ENABLE').on('change', function() {
         $('#FAN__LEVEL_DEF').val(0);
         $('#FAN__TEMP_USER_VAR_SLOT').removeAttr('readonly');
         $('#FAN__TEMP_USER_VAR_SLOT').removeAttr('disabled');
+        $('#FAN__TEMP_USER_VAR_SLOT').removeClass('bg-dark');
         $('#FAN__TARGET').removeAttr('readonly');
         $('#FAN__TARGET').removeAttr('disabled');
+        $('#FAN__TARGET').removeClass('bg-dark');
         $('#FAN__LEVEL_LOW').removeAttr('readonly');
         $('#FAN__LEVEL_LOW').removeAttr('disabled');
+        $('#FAN__LEVEL_LOW').removeClass('bg-dark');
         $('#FAN__LEVEL_MED').removeAttr('readonly');
         $('#FAN__LEVEL_MED').removeAttr('disabled');
+        $('#FAN__LEVEL_MED').removeClass('bg-dark');
         $('#FAN__LEVEL_HIGH').removeAttr('readonly');
         $('#FAN__LEVEL_HIGH').removeAttr('disabled');
+        $('#FAN__LEVEL_HIGH').removeClass('bg-dark');
         $('#FAN__THOLD_DIFF_LOW').removeAttr('readonly');
         $('#FAN__THOLD_DIFF_LOW').removeAttr('disabled');
+        $('#FAN__THOLD_DIFF_LOW').removeClass('bg-dark');
         $('#FAN__THOLD_DIFF_MED').removeAttr('readonly');
         $('#FAN__THOLD_DIFF_MED').removeAttr('disabled');
+        $('#FAN__THOLD_DIFF_MED').removeClass('bg-dark');
         $('#FAN__THOLD_DIFF_HIGH').removeAttr('readonly');
         $('#FAN__THOLD_DIFF_HIGH').removeAttr('disabled');
+        $('#FAN__THOLD_DIFF_HIGH').removeClass('bg-dark');
     } else {
         $('#FAN__LEVEL_DEF').val(100);
         $('#FAN__TEMP_USER_VAR_SLOT').attr('readonly', true);
         $('#FAN__TEMP_USER_VAR_SLOT').attr('disabled', true);
+        $('#FAN__TEMP_USER_VAR_SLOT').addClass('bg-dark');
         $('#FAN__TARGET').attr('readonly', true);
         $('#FAN__TARGET').attr('disabled', true);
+        $('#FAN__TARGET').addClass('bg-dark');
         $('#FAN__LEVEL_LOW').attr('readonly', true);
         $('#FAN__LEVEL_LOW').attr('disabled', true);
+        $('#FAN__LEVEL_LOW').addClass('bg-dark');
         $('#FAN__LEVEL_MED').attr('readonly', true);
         $('#FAN__LEVEL_MED').attr('disabled', true);
+        $('#FAN__LEVEL_MED').addClass('bg-dark');
         $('#FAN__LEVEL_HIGH').attr('readonly', true);
         $('#FAN__LEVEL_HIGH').attr('disabled', true);
+        $('#FAN__LEVEL_HIGH').addClass('bg-dark');
         $('#FAN__THOLD_DIFF_LOW').attr('readonly', true);
         $('#FAN__THOLD_DIFF_LOW').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_LOW').addClass('bg-dark');
         $('#FAN__THOLD_DIFF_MED').attr('readonly', true);
         $('#FAN__THOLD_DIFF_MED').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_MED').addClass('bg-dark');
         $('#FAN__THOLD_DIFF_HIGH').attr('readonly', true);
         $('#FAN__THOLD_DIFF_HIGH').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_HIGH').addClass('bg-dark');
     }
 });
 
@@ -7115,42 +7149,59 @@ $( document ).ready(function() {
     if (!$('#DEW_HEATER__THOLD_ENABLE').prop('checked')) {
         $('#DEW_HEATER__TEMP_USER_VAR_SLOT').attr('readonly', true);
         $('#DEW_HEATER__TEMP_USER_VAR_SLOT').attr('disabled', true);
+        $('#DEW_HEATER__TEMP_USER_VAR_SLOT').addClass('bg-dark');
         $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').attr('readonly', true);
         $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').attr('disabled', true);
+        $('#DEW_HEATER__DEWPOINT_USER_VAR_SLOT').addClass('bg-dark');
         $('#DEW_HEATER__MANUAL_TARGET').attr('readonly', true);
         $('#DEW_HEATER__MANUAL_TARGET').attr('disabled', true);
+        $('#DEW_HEATER__MANUAL_TARGET').addClass('bg-dark');
         $('#DEW_HEATER__LEVEL_LOW').attr('readonly', true);
         $('#DEW_HEATER__LEVEL_LOW').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_LOW').addClass('bg-dark');
         $('#DEW_HEATER__LEVEL_MED').attr('readonly', true);
         $('#DEW_HEATER__LEVEL_MED').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_MED').addClass('bg-dark');
         $('#DEW_HEATER__LEVEL_HIGH').attr('readonly', true);
         $('#DEW_HEATER__LEVEL_HIGH').attr('disabled', true);
+        $('#DEW_HEATER__LEVEL_HIGH').addClass('bg-dark');
         $('#DEW_HEATER__THOLD_DIFF_LOW').attr('readonly', true);
         $('#DEW_HEATER__THOLD_DIFF_LOW').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_LOW').addClass('bg-dark');
         $('#DEW_HEATER__THOLD_DIFF_MED').attr('readonly', true);
         $('#DEW_HEATER__THOLD_DIFF_MED').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_MED').addClass('bg-dark');
         $('#DEW_HEATER__THOLD_DIFF_HIGH').attr('readonly', true);
         $('#DEW_HEATER__THOLD_DIFF_HIGH').attr('disabled', true);
+        $('#DEW_HEATER__THOLD_DIFF_HIGH').addClass('bg-dark');
     }
 
     // Fan thresholds
     if (!$('#FAN__THOLD_ENABLE').prop('checked')) {
         $('#FAN__TEMP_USER_VAR_SLOT').attr('readonly', true);
         $('#FAN__TEMP_USER_VAR_SLOT').attr('disabled', true);
+        $('#FAN__TEMP_USER_VAR_SLOT').addClass('bg-dark');
         $('#FAN__TARGET').attr('readonly', true);
         $('#FAN__TARGET').attr('disabled', true);
+        $('#FAN__TARGET').addClass('bg-dark');
         $('#FAN__LEVEL_LOW').attr('readonly', true);
         $('#FAN__LEVEL_LOW').attr('disabled', true);
+        $('#FAN__LEVEL_LOW').addClass('bg-dark');
         $('#FAN__LEVEL_MED').attr('readonly', true);
         $('#FAN__LEVEL_MED').attr('disabled', true);
+        $('#FAN__LEVEL_MED').addClass('bg-dark');
         $('#FAN__LEVEL_HIGH').attr('readonly', true);
         $('#FAN__LEVEL_HIGH').attr('disabled', true);
+        $('#FAN__LEVEL_HIGH').addClass('bg-dark');
         $('#FAN__THOLD_DIFF_LOW').attr('readonly', true);
         $('#FAN__THOLD_DIFF_LOW').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_LOW').addClass('bg-dark');
         $('#FAN__THOLD_DIFF_MED').attr('readonly', true);
         $('#FAN__THOLD_DIFF_MED').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_MED').addClass('bg-dark');
         $('#FAN__THOLD_DIFF_HIGH').attr('readonly', true);
         $('#FAN__THOLD_DIFF_HIGH').attr('disabled', true);
+        $('#FAN__THOLD_DIFF_HIGH').addClass('bg-dark');
     }
 
 });
