show device temperature deltas in config

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5592,6 +5592,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-6">
             <div>Last measurement: <b>{{ dh_temp_str }}</b></div>
+            <div>Last delta: <b>{{ dh_temp_delta_str }}</b></div>
             <div>This should be the slot containing the current temperature to be compared against the dew point (or manual target)</div>
         </div>
     </div>
@@ -5796,6 +5797,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-6">
             <div>Last measurement: <b>{{ fan_temp_str }}</b></div>
+            <div>Last delta: <b>{{ fan_temp_delta_str }}</b></div>
             <div>This should be the slot containing the current temperature to be compared with the target temperature</div>
         </div>
     </div>
