--- a/indi_allsky/flask/templates/index_img.html
+++ b/indi_allsky/flask/templates/index_img.html
@@ -162,7 +162,7 @@ $( document ).ready(function() {
     <div class="text-muted text-center" id="message">Loading...</div>
 </div>
 <div class="row">
-    <div class="text-center align-middle">
+    <div class="text-center">
         <img id="latest-image" class="fit">
     </div>
 </div>
