--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1272,10 +1272,10 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_FILE_COMPRESSION__TIF.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.IMAGE_FILE_COMPRESSION__TIF(class='form-control bg-secondary') }}
+            {{ form_config.IMAGE_FILE_COMPRESSION__TIF(class='form-control bg-secondary bg-dark text-secondary') }}
             <div id="IMAGE_FILE_COMPRESSION__TIF-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">(read-only)</div>
+        <div class="col-sm-8"></div>
     </div>
 
     <div class="form-group row">
