update link styles

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -913,7 +913,7 @@ var camera_id = {{ camera_id }};
             <div id="CLAHE_GRIDSIZE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div><a href="https://docs.opencv.org/4.x/d5/daf/tutorial_py_histogram_equalization.html" target="_blank">OpenCV CLAHE Tutorial</a></div>
+            <div><a href="https://docs.opencv.org/4.x/d5/daf/tutorial_py_histogram_equalization.html" class="text-decoration-none link-info" target="_blank">OpenCV CLAHE Tutorial</a></div>
         </div>
     </div>
 
@@ -3061,7 +3061,7 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
-            <div>Enable using GPS location services.  Requires GPS hardware and <a href="https://github.com/aaronwmorris/indi-allsky/wiki/GPSd-NTP-Time-Sync">GPSd installation</a></div>
+            <div>Enable using GPS location services.  Requires GPS hardware and <a href="https://github.com/aaronwmorris/indi-allsky/wiki/GPSd-NTP-Time-Sync" class="text-decoration-none link-info" target="_blank">GPSd installation</a></div>
         </div>
     </div>
 
