--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1953,6 +1953,28 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.LIGHTGRAPH_OVERLAY__OFFSET_Y.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.LIGHTGRAPH_OVERLAY__OFFSET_Y(class='form-control bg-secondary') }}
+            <div id="LIGHTGRAPH_OVERLAY__OFFSET_Y-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LIGHTGRAPH_OVERLAY__OFFSET_X.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.LIGHTGRAPH_OVERLAY__OFFSET_X(class='form-control bg-secondary') }}
+            <div id="LIGHTGRAPH_OVERLAY__OFFSET_X-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">Offset from center</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.LIGHTGRAPH_OVERLAY__DAY_COLOR.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -6564,6 +6586,8 @@ const field_names = [
     'LIGHTGRAPH_OVERLAY__GRAPH_HEIGHT',
     'LIGHTGRAPH_OVERLAY__GRAPH_BORDER',
     'LIGHTGRAPH_OVERLAY__NOW_MARKER_SIZE',
+    'LIGHTGRAPH_OVERLAY__OFFSET_Y',
+    'LIGHTGRAPH_OVERLAY__OFFSET_X',
     'LIGHTGRAPH_OVERLAY__DAY_COLOR',
     'LIGHTGRAPH_OVERLAY__NIGHT_COLOR',
     'LIGHTGRAPH_OVERLAY__HOUR_COLOR',
