--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5355,6 +5355,90 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__SHT3X_HEATER_NIGHT.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.TEMP_SENSOR__SHT3X_HEATER_NIGHT(class='form-check-input') }}
+                <div id="TEMP_SENSOR__SHT3X_HEATER_NIGHT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__SHT3X_HEATER_DAY.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.TEMP_SENSOR__SHT3X_HEATER_DAY(class='form-check-input') }}
+                <div id="TEMP_SENSOR__SHT3X_HEATER_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__SHT4X_MODE_NIGHT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__SHT4X_MODE_NIGHT(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__SHT4X_MODE_NIGHT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__SHT4X_MODE_DAY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__SHT4X_MODE_DAY(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__SHT4X_MODE_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div></div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__HTU31D_HEATER_NIGHT.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.TEMP_SENSOR__HTU31D_HEATER_NIGHT(class='form-check-input') }}
+                <div id="TEMP_SENSOR__HTU31D_HEATER_NIGHT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__HTU31D_HEATER_DAY.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.TEMP_SENSOR__HTU31D_HEATER_DAY(class='form-check-input') }}
+                <div id="TEMP_SENSOR__HTU31D_HEATER_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.TEMP_SENSOR__TSL2561_GAIN_NIGHT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -6824,6 +6908,8 @@ const field_names = [
     'TEMP_SENSOR__MQTT_PORT',
     'TEMP_SENSOR__MQTT_USERNAME',
     'TEMP_SENSOR__MQTT_PASSWORD',
+    'TEMP_SENSOR__SHT4X_MODE_NIGHT',
+    'TEMP_SENSOR__SHT4X_MODE_DAY',
     'TEMP_SENSOR__TSL2561_GAIN_NIGHT',
     'TEMP_SENSOR__TSL2561_GAIN_DAY',
     'TEMP_SENSOR__TSL2561_INT_NIGHT',
@@ -6952,6 +7038,10 @@ const checkbox_field_names = [
     'LIBCAMERA__AWB_ENABLE',
     'LIBCAMERA__AWB_ENABLE_DAY',
     'ACCUM_CAMERA__EVEN_EXPOSURES',
+    'TEMP_SENSOR__SHT3X_HEATER_NIGHT',
+    'TEMP_SENSOR__SHT3X_HEATER_DAY',
+    'TEMP_SENSOR__HTU31D_HEATER_NIGHT',
+    'TEMP_SENSOR__HTU31D_HEATER_DAY',
     'TEMP_SENSOR__MQTT_TLS',
     'TEMP_SENSOR__MQTT_CERT_BYPASS',
     'DEW_HEATER__ENABLE_DAY',
