--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5363,7 +5363,7 @@ var camera_id = {{ camera_id }};
                 <div id="TEMP_SENSOR__SHT3X_HEATER_NIGHT-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">Only enabled when RH > 85%</div>
     </div>
 
     <div class="form-group row">
@@ -5432,7 +5432,7 @@ var camera_id = {{ camera_id }};
                 <div id="TEMP_SENSOR__HTU31D_HEATER_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">Only enabled when RH > 85%</div>
     </div>
 
     <hr>
