new lens for simulator

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -35,6 +35,7 @@ var icd = {
     'meike_f2.8_3.5mm_4-3' :        12.5,
     'custom_f7_5.8mm_m42' :         17.3,
     '7artisans_f2.8_4.0mm_4-3' :    12.37,
+    'laowa_f2.8_4.0mm_4-3' :        13.4,
     'cs-2.5ir_8mp_-f_f1.6_2.5mm_2-3' : 6.4,
 }
 
