--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5160,7 +5160,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__A_I2C_ADDRESS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Hexidecimal address - Example: 0x77</div>
+            <div>Hexadecimal address - Example: 0x77</div>
         </div>
     </div>
 
@@ -5227,7 +5227,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__B_I2C_ADDRESS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Hexidecimal address - Example: 0x76</div>
+            <div>Hexadecimal address - Example: 0x76</div>
         </div>
     </div>
 
@@ -5294,7 +5294,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__C_I2C_ADDRESS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Hexidecimal address - Example: 0x40</div>
+            <div>Hexadecimal address - Example: 0x40</div>
         </div>
     </div>
 
