--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2005,6 +2005,19 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.LIGHTGRAPH_OVERLAY__DUSK_COLOR.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.LIGHTGRAPH_OVERLAY__DUSK_COLOR(class='form-control bg-secondary') }}
+            <div id="LIGHTGRAPH_OVERLAY__DUSK_COLOR-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.LIGHTGRAPH_OVERLAY__NIGHT_COLOR.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -6721,6 +6734,7 @@ const field_names = [
     'LIGHTGRAPH_OVERLAY__OFFSET_X',
     'LIGHTGRAPH_OVERLAY__SCALE',
     'LIGHTGRAPH_OVERLAY__DAY_COLOR',
+    'LIGHTGRAPH_OVERLAY__DUSK_COLOR',
     'LIGHTGRAPH_OVERLAY__NIGHT_COLOR',
     'LIGHTGRAPH_OVERLAY__HOUR_COLOR',
     'LIGHTGRAPH_OVERLAY__BORDER_COLOR',
